try to fix scrollbar bug

--- a/home_style.css
+++ b/home_style.css
@@ -1,6 +1,6 @@
 html {
   height: 100%;
-  overflow: hidden;
+  overflow: none;
 }
 
 .acc-bnr {
